--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,20 @@ jobs:
         with:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
 
-      - name: Terraform Init
-        working-directory: terraform
-        run: terraform init
-
       - name: Terraform Format Check
         working-directory: terraform
         run: terraform fmt -check -recursive
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Terraform Init
+        working-directory: terraform
+        run: terraform init
 
       - name: Terraform Validate
         working-directory: terraform
@@ -41,10 +48,6 @@ jobs:
 
       - name: Terraform Plan (Dry Run)
         working-directory: terraform
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ env.AWS_REGION }}
         run: |
           terraform plan -out=tfplan -input=false
 
@@ -132,35 +135,6 @@ jobs:
       - name: Terraform Init
         working-directory: terraform
         run: terraform init
-
-      - name: Ensure existing S3 bucket is tracked by Terraform (import if needed)
-        working-directory: terraform
-        run: |
-          set -euo pipefail
-          # Read project_name and environment from terraform.tfvars
-          PROJECT_NAME=$(sed -nE "s/^project_name\s*=\s*\"?([^\"]+)\"?/\1/p" terraform.tfvars)
-          ENVIRONMENT=$(sed -nE "s/^environment\s*=\s*\"?([^\"]+)\"?/\1/p" terraform.tfvars)
-
-          # Get AWS account id
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-
-          # Compute bucket name using the same local logic
-          BUCKET_NAME="${PROJECT_NAME}-${ENVIRONMENT}-${ACCOUNT_ID}"
-
-          echo "Computed bucket name: $BUCKET_NAME"
-
-          # If the aws_s3_bucket.website resource is not in state, but the bucket exists, import it
-          if ! terraform state list | grep -q '^aws_s3_bucket.website$'; then
-            echo "aws_s3_bucket.website not found in state. Checking if bucket exists..."
-            if aws s3api head-bucket --bucket "$BUCKET_NAME" >/dev/null 2>&1; then
-              echo "Bucket $BUCKET_NAME exists - importing into Terraform state"
-              terraform import aws_s3_bucket.website "$BUCKET_NAME"
-            else
-              echo "Bucket $BUCKET_NAME does not exist - Terraform will create it"
-            fi
-          else
-            echo "aws_s3_bucket.website already present in Terraform state"
-          fi
 
       - name: Terraform Apply
         working-directory: terraform
